--- a/build.gradle
+++ b/build.gradle
@@ -1,54 +1,52 @@
-plugins {
-    id "net.serenity-bdd.serenity-gradle-plugin" version "3.2.4"
-    id 'java'
-    id 'eclipse'
-    id 'idea'
-}
-
-defaultTasks 'clean', 'test', 'aggregate'
+defaultTasks 'clean','test','aggregate'
 
 repositories {
-    mavenCentral()
+    mavenLocal()
+    jcenter()
 }
+
+buildscript {
+    repositories {
+        mavenLocal()
+        jcenter()
+    }
+    dependencies {
+        classpath("net.serenity-bdd:serenity-gradle-plugin:2.4.34")
+    }
+}
+
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'idea'
+apply plugin: 'net.serenity-bdd.aggregator'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 ext {
     slf4jVersion = '1.7.7'
-    serenityCoreVersion = '3.2.4'
-    junitVersion = '5.8.2'
-    assertJVersion = '3.22.0'
-    logbackVersion = '1.2.11'
-    lombokVersion = '1.18.24'
+    serenityCoreVersion = '2.4.34'
+    junitVersion = '4.13.1'
+    assertJVersion = '3.8.0'
+    logbackVersion = '1.2.3'
+    lombokVersion = '1.18.20'
 }
 
 dependencies {
     testImplementation "net.serenity-bdd:serenity-core:${serenityCoreVersion}",
-            "net.serenity-bdd:serenity-junit5:${serenityCoreVersion}",
-            "org.junit.jupiter:junit-jupiter-api:${junitVersion}",
-            "org.junit.jupiter:junit-jupiter-engine:${junitVersion}",
-            "org.assertj:assertj-core:${assertJVersion}",
-            "org.projectlombok:lombok:${lombokVersion}",
-            "ch.qos.logback:logback-classic:${logbackVersion}"
+                "net.serenity-bdd:serenity-junit:${serenityCoreVersion}",
+                "net.serenity-bdd:serenity-screenplay:${serenityCoreVersion}",
+                "junit:junit:${junitVersion}",
+                "org.assertj:assertj-core:${assertJVersion}",
+                "org.projectlombok:lombok:${lombokVersion}",
+                "ch.qos.logback:logback-classic:${logbackVersion}"
 }
 
 test {
-    useJUnitPlatform()
     testLogging.showStandardStreams = true
     systemProperties System.getProperties()
 }
 
 gradle.startParameter.continueOnFailure = true
-
-serenity {
-    reports = ["single-page-html"]
-
-    // Specify the root package of any JUnit acceptance tests
-    testRoot="starter"
-
-    // Specify the root directory of any Cucumber feature files
-    requirementsDir = "src/test/resources/features"
-}
 
 test.finalizedBy(aggregate)
